# envisionmgmt

./: .gitignore  AGENT_LOG.md  CLAUDE.md  LAUNCH_CHECKLIST.md  PRIORITIES.md  ROADMAP.md
products/omnisupport/backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
products/omnisupport/backend/alembic/: env.py
products/omnisupport/backend/alembic/versions/: 001_initial_schema.py  002_add_attachments.py
products/omnisupport/backend/services/admin/billing/: __init__.py  service.py  usage.py
products/omnisupport/backend/services/admin/reports/: __init__.py  exporters.py  generator.py
products/omnisupport/backend/services/admin/scenarios/: __init__.py  executor.py  nodes.py  templates.py  triggers.py
products/omnisupport/backend/services/ai/knowledge/: __init__.py  chunking.py  crawler.py  processors.py
products/omnisupport/backend/services/ai/llm/: __init__.py  anthropic.py  base.py  gigachat.py  openai.py  (+2 more)
products/omnisupport/backend/services/channel/: __init__.py  widget_api.py
products/omnisupport/backend/services/core/: __init__.py  main.py
products/omnisupport/backend/services/superadmin/: __init__.py  service.py
products/omnisupport/backend/shared/: __init__.py  config.py  database.py  storage.py
products/omnisupport/backend/shared/auth/: __init__.py  dependencies.py  jwt.py  password.py  two_factor.py
products/omnisupport/backend/shared/events/: __init__.py  publisher.py  subscriber.py  types.py
products/omnisupport/backend/shared/models/: __init__.py  ai.py  analytics.py  attachment.py  base.py  billing.py  channel.py  conversation.py  customer.py  department.py  integration.py  knowledge.py  scenario.py  skill.py  tenant.py  user.py
products/omnisupport/backend/shared/schemas/: __init__.py  attachment.py  auth.py  base.py  conversation.py  customer.py  tenant.py  user.py
products/omnisupport/backend/tests/: __init__.py  conftest.py  test_auth.py  test_conversations.py  test_messages.py
products/omnisupport/backend/workers/: ai.py  analytics.py  base.py  main.py  notification.py  router.py  webhook.py
(+119 files in other folders)
